src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__single_docstring_docstring_singles_module_multiline.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: double
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 3
  fix:
    content: "\"\"\"\nthis is not a docstring\n\"\"\""
    location:
      row: 4
      column: 0
    end_location:
      row: 6
      column: 3
  parent: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 9
    column: 0
  end_location:
    row: 11
    column: 3
  fix:
    content: "\"\"\"\nthis is not a docstring\n\"\"\""
    location:
      row: 9
      column: 0
    end_location:
      row: 11
      column: 3
  parent: ~

