src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__single_docstring_docstring_singles_module_singleline.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: double
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 31
  fix:
    content: "\"\"\" this is not a docstring \"\"\""
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 31
  parent: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 31
  fix:
    content: "\"\"\" this is not a docstring \"\"\""
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 31
  parent: ~

