src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__singles_singles.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesInlineString:
      quote: double
  location:
    row: 1
    column: 24
  end_location:
    row: 1
    column: 45
  fix:
    content:
      - "\"single quote string\""
    location:
      row: 1
      column: 24
    end_location:
      row: 1
      column: 45
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: double
  location:
    row: 2
    column: 24
  end_location:
    row: 2
    column: 46
  fix:
    content:
      - "u\"double quote string\""
    location:
      row: 2
      column: 24
    end_location:
      row: 2
      column: 46
  parent: ~

